--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-lastfm": "^1.0.1",
     "path": "^0.12.7"
