--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-lastfm": "^1.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
